# kartoffelpure

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PROJECT_SPEC.md  README.md  ROADMAP.md  knownissues.md
.cursor/: rules.md
src/: lib.rs  main.rs
src/browser/: mod.rs  tab.rs  tab_manager.rs  view.rs
src/database/: mod.rs  path.rs
src/database/bookmark/: entry.rs  mod.rs  repository.rs  service.rs
src/database/history/: entry.rs  mod.rs  repository.rs  service.rs
src/ui/: bookmark_window.rs  browser_window.rs  history_window.rs  mod.rs  tab_layout.rs  tab_strip.rs
