[package]
name = "kartoffelpure"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.10"
webkit6 = "0.5"
glib = "0.21"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
